--- a/pom.xml
+++ b/pom.xml
@@ -32,10 +32,23 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>11</source>
+					<target>11</target>
+				</configuration>
 			</plugin>
 		</plugins>
+		<!--		<plugins>-->
+		<!--			<plugin>-->
+		<!--				<groupId>org.springframework.boot</groupId>-->
+		<!--				<artifactId>spring-boot-maven-plugin</artifactId>-->
+		<!--				<configuration>-->
+		<!--					<mainClass>com.exxeta.expenseservice.ExpenseMainClass</mainClass>-->
+		<!--				</configuration>-->
+		<!--			</plugin>-->
+		<!--		</plugins>-->
 	</build>
 
 </project>
